@@ -325,14 +325,14 @@ public class GlobalStateManagerImpl implements GlobalStateManager {
         for (final TopicPartition topicPartition : storeMetadata.changelogPartitions) {
             long currentDeadline = NO_DEADLINE;
 
-            globalConsumer.assign(Collections.singletonList(topicPartition));
+            globalConsumer.assign(List.of(topicPartition));
             long offset;
             final Long checkpoint = currentOffsets.get(topicPartition);
             if (checkpoint != null) {
                 globalConsumer.seek(topicPartition, checkpoint);
                 offset = checkpoint;
             } else {
-                globalConsumer.seekToBeginning(Collections.singletonList(topicPartition));
+                globalConsumer.seekToBeginning(List.of(topicPartition));
                 offset = getGlobalConsumerOffset(topicPartition);
             }
             final Long highWatermark = storeMetadata.highWatermarks.get(topicPartition);
@@ -467,14 +467,14 @@ public class GlobalStateManagerImpl implements GlobalStateManager {
         for (final TopicPartition topicPartition : storeMetadata.changelogPartitions) {
             long currentDeadline = NO_DEADLINE;
 
-            globalConsumer.assign(Collections.singletonList(topicPartition));
+            globalConsumer.assign(List.of(topicPartition));
             long offset;
             final Long checkpoint = currentOffsets.get(topicPartition);
             if (checkpoint != null) {
                 globalConsumer.seek(topicPartition, checkpoint);
                 offset = checkpoint;
             } else {
-                globalConsumer.seekToBeginning(Collections.singletonList(topicPartition));
+                globalConsumer.seekToBeginning(List.of(topicPartition));
                 offset = getGlobalConsumerOffset(topicPartition);
             }
 
